--- a/index.html
+++ b/index.html
@@ -66,6 +66,86 @@
             margin:0vw;
             width:50vw;
         }
+        #premiumdiv{
+            position:absolute;
+            margin:0vw;
+            left:0vw;
+            top:80vw;
+            width:98.8vw;
+            height:20vw;
+            background-color: rgb(141, 141, 141);
+            padding-top:2vw;
+            padding-bottom:2vw;
+        }
+        #premiumimg{
+            position:absolute;
+            left:2vw;
+            width:40vw;
+            height:20vw;
+        }
+        #premium1{
+            position:absolute;
+            left:45vw;
+            font-size:5vw;
+            top:0vw;
+            margin:0vw;
+            width:50vw;
+        }
+        #premium2{
+            position:absolute;
+            left:45vw;
+            font-size:2vw;
+            top:6vw;
+            margin:0vw;
+            width:50vw;
+        }
+        #unorderedpremium{
+            position:absolute;
+            left:43vw;
+            font-size:2vw;
+            top:10vw;
+            margin:0vw;
+            width:50vw;
+        }
+        #standarddiv{
+            position:absolute;
+            margin:0vw;
+            left:2vw;
+            top:55vw;
+        }
+        #standardimg{
+            position:absolute;
+            width:40vw;
+            height:20vw;
+            left:55vw;
+        }
+        #standard1{
+            position:absolute;
+            left:2vw;
+            font-size:5vw;
+            top:0vw;
+            margin:0vw;
+            width:50vw;
+        }
+        #standard2{
+            position:absolute;
+            left:2vw;
+            font-size:2vw;
+            top:6vw;
+            margin:0vw;
+            width:50vw;
+        }
+        #unorderedstandard{
+            position:absolute;
+            left:0vw;
+            font-size:2vw;
+            top:10vw;
+            margin:0vw;
+            width:50vw;
+        }
+        .premium{
+            color:gold;
+        }
     </style>
 </head>
 <body>
@@ -82,6 +162,26 @@
             <li id="basic3">120 Seconds</li>
             <li id="basic4">3 Days Delivery</li>
             <li id="basic5">Fast 1 Day Delivery(+866)</li>
+        </ul>
+    </div>
+    <div id='standarddiv'>
+        <img id="standardimg" src="medium.png">
+        <h1 id="standard1">Rupees 2,164 Only</h1>
+        <p id="standard2">5-10 Minutes Youtube videos</p>
+        <ul id="unorderedstandard">
+            <li id="standard3">600 Seconds</li>
+            <li id="standard4">3 Days Delivery</li>
+            <li id="standard5">Fast 1 Day Delivery(+866)</li>
+        </ul>
+    </div>
+    <div id='premiumdiv'>
+        <img id="premiumimg" src="premium.png">
+        <h1 id="premium1" class="premium">Rupees 7,788 Only</h1>
+        <p id="premium2"class="premium">Wedding Edits</p>
+        <ul id="unorderedpremium">
+            <li id="premium3"class="premium">10,800 Seconds</li>
+            <li id="premium4"class="premium">4 Days Delivery</li>
+            <li id="premium5"class="premium">Fast 2 Day Delivery(+866)</li>
         </ul>
     </div>
 </body>
